[tool.poetry]
name = "culvert-vision-mvp"
version = "0.1.0"
description = ""
authors = ["Devin Power <dpwr16@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
cv-assets = {path = "cv-assets", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
