[tool.poetry]
name = "cv-assets"
version = "0.1.0"
description = "Dagster project for creating training-ready computer vision assets."
authors = ["Devin Power <dpwr16@gmail.com>"]
readme = "README.md"
packages = [{ include = "cv_assets" }]

[tool.poetry.dependencies]
python = "~3.10"
grpcio = "1.56.2"
dagster = "^1.4"
dagster-webserver = "^1.4"
python-dotenv = "^1.0"
pyarrow = "~13.0"
pandas = { version = "^1.5", extras = ["parquet"] }
psycopg2 = "^2.9"
pyproj = "~3.6"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"
black = "*"
isort = "*"
pyright = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "cv_assets"

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B"]

# Never enforce `E501` (line length violations).
ignore = ["E501"]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.isort]
profile = "black"
